--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gulp-uglify": "^3.0.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
-    "vinyl-paths": "^2.1.0",
+    "vinyl-paths": "^2.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
